# llm-confirm-tokens

./: README.md  pyproject.toml
docs/: show-and-tell-post.md
docs/adr/: 0001-model-owned-token-counting.md
llm_confirm_tokens/: __init__.py  _adapters.py
tests/: conftest.py  test_anthropic_adapter.py  test_gate.py  test_gemini_adapter.py  test_integration.py  test_openai_adapter.py  test_review_fixes.py
